--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             la tecnología. Mis fortalezas incluyen trabajar en tiempo y forma, gestionar proyectos de manera eficiente y
             ordenada, y actualmente estoy ampliando mis conocimientos para convertirme en programadora fullstack.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv">Link al CV</button>
+            <a href="assets/CV. Darinka.pdf" target="_blank">
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv">Link al CV</button>
+            </a>
           </div>
         </div>
       </div>
