--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             la tecnología. Mis fortalezas incluyen trabajar en tiempo y forma, gestionar proyectos de manera eficiente y
             ordenada, y actualmente estoy ampliando mis conocimientos para convertirme en programadora fullstack.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="assets/CV. Darinka.pdf" target="_blank">
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4 boton-cv">Link al CV</button>
+            <a href="assets/CV. Darinka.pdf" class="btn btn-outline-secondary btn-lg px-4 boton-cv" target="_blank">
+              Link al CV
             </a>
           </div>
         </div>
